[gd_scene load_steps=3 format=3 uid="uid://bsfr8c1sipf2l"]

[ext_resource type="Script" path="res://SettingsMenu.gd" id="1_h5erd"]
[ext_resource type="Texture2D" uid="uid://ceogafq0o2lhx" path="res://Assets/JungleBG.png" id="2_7orqg"]

[node name="SettingsMenu" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_left = 224.0
offset_top = 176.0
offset_right = 224.0
offset_bottom = 176.0
scale = Vector2(0.625644, 0.610775)
script = ExtResource("1_h5erd")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -359.629
offset_top = -284.884
offset_right = -319.629
offset_bottom = -244.884
grow_horizontal = 2
grow_vertical = 0
scale = Vector2(43.1662, 98.2775)
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource("2_7orqg")
expand_mode = 1
stretch_mode = 6

[node name="VBoxContainer" type="VBoxContainer" parent="."]
top_level = true
layout_mode = 0
offset_left = 223.0
offset_top = 89.0
offset_right = 1524.0
offset_bottom = 672.0
scale = Vector2(0.5, 0.572)
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 336
text = "Settings"

[node name="Label2" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 36
text = "Control Settings"

[node name="ControlSchemeOption" type="OptionButton" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 36
item_count = 3
popup/item_0/text = "A/D Keys"
popup/item_0/id = 0
popup/item_1/text = "Arrow Keys"
popup/item_1/id = 1
popup/item_2/text = "Mouse"
popup/item_2/id = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="ApplyButton" type="Button" parent="."]
layout_mode = 2
offset_left = 19.1802
offset_top = 997.094
offset_right = 124.18
offset_bottom = 1055.09
theme_override_font_sizes/font_size = 36
text = "Apply"

[node name="CancelButton" type="Button" parent="."]
layout_mode = 2
offset_left = 145.45
offset_top = 997.094
offset_right = 269.45
offset_bottom = 1055.09
theme_override_font_sizes/font_size = 36
text = "Back"

[connection signal="pressed" from="ApplyButton" to="." method="_on_apply_button_pressed"]
[connection signal="pressed" from="CancelButton" to="." method="_on_cancel_button_pressed"]
